# Custom-Model

./: CMakeLists.txt  CPU_DEBUGGER.md  README.html  README.md  compile_commands.json  desr2json.sh  first.json  generate.sh  run.sh
clkernel/: conv2d.cl  img2col.cl  pool2d.cl
example/: create_model_sample.cpp  main.cpp
include/: pzk-schema_generated.h  pzk.hpp
include/model/: pzk-schema_generated.h  pzk.hpp
include/runtime/: builder.hpp  engine.hpp  img2col.hpp
include/runtime/op/: allops.hpp  conv2d.hpp  img2col.hpp  pool2d.hpp
model-flatbuffer/: pzk-metadata.json
src/: create_model_sample.cpp  mytest.cpp  test_json.cpp
src/model/: json11.cpp
test-model/: first.pzkm
